--- a/iwamaDance_RealityConposer.rcproject/com.apple.RCFoundation.Project
+++ b/iwamaDance_RealityConposer.rcproject/com.apple.RCFoundation.Project
@@ -330,7 +330,7 @@
                           "depth",
                           {
                             "typeName" : "Double",
-                            "value" : 0.47722183719758071
+                            "value" : 0.070832283266129031
                           }
                         ],
                         [
@@ -365,7 +365,7 @@
                           "material",
                           {
                             "typeName" : "String",
-                            "value" : "steel"
+                            "value" : "standard"
                           }
                         ],
                         [
@@ -423,6 +423,22 @@
                           }
                         ]
                       ],
+                      "children" : {
+                        "back_1" : {
+                          "overrides" : {
+                            "factory" : null,
+                            "runtimeAttributes" : [
+                              [
+                                "RuntimeIdentifier",
+                                {
+                                  "typeName" : "UUID",
+                                  "value" : "BC4765B9-9D53-43F5-A536-104729BBD99D"
+                                }
+                              ]
+                            ]
+                          }
+                        }
+                      },
                       "factory" : {
                         "identifier" : "com.apple.rc.af.CoreAssetFactories.Text",
                         "version" : "0.0"
@@ -496,21 +512,21 @@
               "title" : "Scene",
               "viewTransform" : {
                 "cameraTransform" : [
-                  0.97918242216110229,
-                  1.6574611905184611e-08,
-                  -0.20298238098621368,
+                  0.99993574619293213,
+                  -3.0039341680776488e-08,
+                  -0.011334403418004513,
                   0,
-                  -0.0091008422896265984,
-                  0.99899441003799438,
-                  -0.043902494013309479,
+                  -0.0058544049970805645,
+                  0.85627597570419312,
+                  -0.51648551225662231,
                   0,
-                  0.20277833938598633,
-                  0.044835824519395828,
-                  0.97819769382476807,
+                  0.0097053758800029755,
+                  0.51651859283447266,
+                  0.85622096061706543,
                   0,
-                  3.7650496959686279,
-                  -0.27687749266624451,
-                  8.017425537109375,
+                  0.73504507541656494,
+                  4.8434844017028809,
+                  6.1593713760375977,
                   1
                 ],
                 "sceneTransform" : [
